<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_apply_training"
            android:title="@string/menu_apply_training" />
        <item
            android:id="@+id/nav_applied_trainings"
            android:title="@string/menu_applied_training" />
        <item
            android:id="@+id/nav_add_completed_trainings"
            android:title="Add Completed Training" />
        <item
            android:id="@+id/nav_apply_application"
            android:title="@string/menu_apply_application" />

        <item android:id="@+id/nav_applied_applications"
            android:title="@string/menu_applied_applications"/>

<<<<<<< HEAD
        <item android:id="@+id/nav_personal_details"
            android:title="@string/cas_title"/>

      <!--  <item android:id="@+id/nav_professional_details"
            android:title="@string/cas_professional_details"/>
-->
=======
        <item android:id="@+id/nav_user_details"
            android:title="@string/menu_user_details"/>

        <item android:id="@+id/nav_edit_details"
            android:title="@string/menu_edit_user_details"/>
>>>>>>> afec2c8491c64d10e88a581f69bcda4ff75eadbb

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />


    </group>
</menu>